--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>at.geilehner.supresslog</groupId>
     <artifactId>supresslog</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0</version>
     <properties>
         <slf4jVersion>1.6.1</slf4jVersion>
     </properties>
