--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>at.geilehner.supresslog</groupId>
-    <artifactId>supresslog</artifactId>
+    <groupId>at.geilehner</groupId>
+    <artifactId>logsuppression</artifactId>
     <version>1.0</version>
     <properties>
         <slf4jVersion>1.6.1</slf4jVersion>
